# energy-bench

./: Makefile  README.md  __init__.py  __main__.py  base.py  environments.py  errors.py  languages.py  prompts.py  pyproject.toml  reporter.py  runner.py  spec.py  trial-run.yml  utils.py  workloads.py
benchmarks/human/clbg/c/: binary-trees.yml  fannkuch-redux.yml  n-body.yml  spectral-norm.yml
benchmarks/human/clbg/c#/: binary-trees.yml  fannkuch-redux.yml  n-body.yml  spectral-norm.yml
benchmarks/human/clbg/c++/: binary-trees.yml  n-body.yml  spectral-norm.yml
benchmarks/human/clbg/java/: n-body.yml
benchmarks/human/clbg/java/graalvm/: binary-trees.yml  fannkuch-redux.yml  n-body.yml  spectral-norm.yml
benchmarks/human/clbg/java/openjdk/: binary-trees.yml  fannkuch-redux.yml  n-body.yml  spectral-norm.yml
benchmarks/human/clbg/javascript/: fannkuch-redux.yml  n-body.yml  spectral-norm.yml
benchmarks/human/clbg/python/: binary-trees.yml
benchmarks/human/clbg/rust/: binary-trees.yml  fannkuch-redux.yml  spectral-norm.yml
benchmarks/llm/clbg/: binary-trees.yml
commands/: __init__.py  base.py  generate.py  generator.py  measure.py  report.py  reporter.py  runner.py
rapl_interface/: Cargo.toml  RaplInterface.java
rapl_interface/src/: lib.rs  rapl.rs
setups/: environments.py  workloads.py
